fixed bug "clipping content", added html for navigation

--- a/blocks/_assets/adjustment.scss
+++ b/blocks/_assets/adjustment.scss
@@ -11,33 +11,36 @@ body, html{
   min-height: 100%;
   flex-direction: column;
   justify-content: space-between;
-  overflow: hidden;
-  .content{
-    display: flex;
-    flex-direction: column;
-    flex: 1 1 0;
+  overflow-x: hidden;
+  background-color: #ffffff;
+  .container{
+    flex: 1;
+    flex-direction: row;
   }
-
 }
+
 .footer{
   min-height: $footer-height;
   background-color: $header-footer-color;
   flex: 0 0 auto;
 }
+
 .container{
   display: flex;
   flex-wrap: nowrap;
   margin: 0 auto;
   width: $container-width;
-
 }
+
 ul{
   padding: 0;
   margin: 0;
 }
+
 li{
   list-style: none;
 }
+
 img {
   border: 0;
   vertical-align: top;
